Introduced Excel Export. wanna import.

--- a/FFUExporter/FFUExporter_vc10.vcxproj.filters
+++ b/FFUExporter/FFUExporter_vc10.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="tmp\moc\Shipping\moc_MainUnt.cpp">
       <Filter>Generated Files\Shipping</Filter>
     </ClCompile>
+    <ClCompile Include="MainUntExchange.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AddonFuncUnt.h">
